<resources>
    <string name="app_name" translatable="false">Homie</string>
    <string name="slogan">Encontrar tu casa, nunca fue tan facil</string>

    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="home">Inicio</string>
    <string name="likes">Favoritos</string>
    <string name="map">Mapa</string>
    <string name="user">Usuario</string>
    <string name="settings">Ajustes</string>

    <string name="future_feature">Proximamente</string>

    <string name="forget_password">Olvidé mi contraseña</string>
    <string name="new_user">Nuevo Usuario</string>

    <string name="new_user_txt_name">Nombre</string>
    <string name="new_user_txt_lastname">Apellido</string>
    <string name="new_user_txt_email">Correo Electrónico</string>
    <string name="new_user_txt_reemail">Repetir Correo Electrónico</string>
    <string name="new_user_txt_password">Contraseña</string>
    <string name="new_user_txt_repassword">Repetir Contraseña</string>
    <string name="new_user_create">Crear Usuario</string>
    <string name="new_user_error_empty_name">El nombre no puede estar vacio</string>
    <string name="new_user_error_wrong_name">El nombre no es valido</string>
    <string name="new_user_error_empty_lastname">El apellido no puede estar vacio</string>
    <string name="new_user_error_wrong_lastname">El apellido no es valido</string>
    <string name="new_user_error_empty_email">El correo electrónico no puede estar vacio</string>
    <string name="new_user_error_wrong_email">El correo electrónico no es válido</string>
    <string name="new_user_error_empty_reemail">El correo electrónico no puede estar vacio</string>
    <string name="new_user_error_wrong_reemail">Los correos electrónicos no coinciden</string>
    <string name="new_user_error_empty_password">La contraseña no puede estar vacia</string>
    <string name="new_user_error_wrong_password">La contraseña no contiene un formato valido</string>
    <string name="new_user_error_empty_repassword">La contraseña no puede estar vacia</string>
    <string name="new_user_error_wrong_repassword">Las contraseñas no coinciden</string>
    <string name="new_user_creating">Creando...</string>
    <string name="new_user_success">Usuario creado!</string>
    <string name="new_user_fail">Ocurrió un error al intentar crear el usuario</string>
    <string name="new_user_fail_update">Ocurrió un error al intentar guardar la información personal</string>

    <string name="forget_password_txt_message">Para recuperar tu contraseña, ingresa tu correo electrónico y te enviaremos un email con las instrucciones para cambiar tu clave</string>
    <string name="forget_password_error_empty_email">@string/new_user_error_empty_email</string>
    <string name="forget_password_error_wrong_email">@string/new_user_error_wrong_email</string>
    <string name="forget_password_send">Enviar</string>
    <string name="forget_password_sending">Enviando...</string>
    <string name="forget_password_sent">Si el mail es correcto, te enviaremos un correo</string>

    <string name="login_title">Iniciar Sesión</string>
    <string name="login_txt_email">Correo Electrónico</string>
    <string name="login_txt_password">Contraseña</string>
    <string name="login_forget_password">Olvidé mi contraseña!</string>
    <string name="login_new_user">Nuevo Usuario? Crea uno ahora!</string>
    <string name="login_error_empty_email">@string/new_user_error_empty_email</string>
    <string name="login_error_wrong_email">@string/new_user_error_wrong_email</string>
    <string name="login_error_empty_password">@string/new_user_error_empty_password</string>
    <string name="login_error_wrong_password">@string/new_user_error_wrong_password</string>
    <string name="login_error_email_password">Usuario y/o contraseña incorrectos</string>
    <string name="login">Log In</string>
    <string name="login_in">Ingresando...</string>

    <string name="logout">Log Out</string>
    <string name="logout_question">Estas seguro que quieres cerrar sesión?</string>

    <string name="posts_types_rental">Alquiler</string>
    <string name="posts_types_sale">Venta</string>
    <string name="posts_status_available">Disponible</string>
    <string name="posts_status_reserved">Reservado</string>
    <string name="buildings_types_apartment">Departamento</string>
    <string name="buildings_types_house">Casa</string>
    <string name="room">Ambiente</string>
    <string name="expenses">Expensas</string>

    <string name="success_fetching_posts">Datos actualizados</string>
    <string name="error_fetching_posts">No se pudo actualizar los datos.</string>

    <string name="likes_remove_question_title">Quitar favorito</string>
    <string name="likes_remove_question_message">Estas seguro de que deseas quitar este favorito?</string>

    <string name="cancel">Cancelar</string>
    <string name="language">Idioma</string>
    <string name="theme">Tema</string>
    <string name="automatic">Automático</string>

    <string name="spanish">Español</string>
    <string name="english">Ingles</string>

    <string name="light">Claro</string>
    <string name="dark">Oscuro</string>

    <string name="error_profile_image">Error al obtener la imagen de perfil</string>

    <string name="user_likes_count_message">Te han gustado {count} publicaciones</string>
    <string name="user_comments_count_message">Has comentado {count} publicaciones</string>
    <string name="user_friends_count_message">Tienes {count} amigos</string>

    <string name="post_detail">Detalles</string>
    <string name="post_detail_info">Información</string>
    <string name="post_detail_images">Imágenes</string>
    <string name="post_detail_total">{count} m² Total</string>
    <string name="post_detail_covered">{count} m² Cubierta</string>
    <string name="bathroom">Baño</string>
    <string name="bedroom">Dormitorio</string>
    <string name="antique">Antigüedad</string>
    <string name="error_post_detail_image">Error al obtener la imagen de la publicación</string>

    <string name="contact_whatsapp">Contactar por WhatsApp</string>
    <string name="whatsapp_contact_message">Hola!\nMe contacto desde la App Homie!\nMi nombre es {display_name}\nEstoy interesado en la propiedad de {address}</string>
    <string name="no_whatsapp">No tienes WhatsApp instalado!</string>

    <string name="error_fetching_image">No se pudo obtener la imagen</string>

    <string name="permission_denied">Permiso Denegado</string>
    <string name="permission_denied_message">Por favor permita los accesos desde la configuración.</string>
    <string name="permisson_rejected">Para continuar debe permitir el acceso</string>

    <string name="uploading">Subiendo...</string>
    <string name="uploading_success">Imagen cargada correctamente</string>
    <string name="uploading_error">Error en la subida</string>
    <string name="uploading_cancel">Subida cancelada</string>
</resources>