<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="ar.edu.utn.frba.ddam.homie.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/likesFragment"
        android:name="ar.edu.utn.frba.ddam.homie.fragments.LikesFragment"
        android:label="@string/likes"
        tools:layout="@layout/fragment_likes" />
    <fragment
        android:id="@+id/userFragment"
        android:name="ar.edu.utn.frba.ddam.homie.fragments.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="ar.edu.utn.frba.ddam.homie.activities.SettingsActivity"
        android:label="activity_settings"
        tools:layout="@layout/activity_settings" />
</navigation>