<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_login"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="ar.edu.utn.frba.ddam.homie.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/toForgetPassword"
            app:destination="@id/forgetPasswordFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/toNewUser"
            app:destination="@id/newUserFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="ar.edu.utn.frba.ddam.homie.fragments.ForgetPasswordFragment"
        android:label="@string/forget_password"
        tools:layout="@layout/fragment_forget_password" />
    <fragment
        android:id="@+id/newUserFragment"
        android:name="ar.edu.utn.frba.ddam.homie.fragments.NewUserFragment"
        android:label="@string/new_user"
        tools:layout="@layout/fragment_new_user" />
</navigation>